--- a/src/Components/Login.css
+++ b/src/Components/Login.css
@@ -31,6 +31,7 @@
     margin:2px 0px;
     border: 2px solid rgb(154,154,154);
     font-size: 18px;
+    width: auto;
 }
 
 .login-form input:focus{
@@ -78,3 +79,7 @@ background-color: black;
 color: rgb(255,176,29);
 cursor:pointer;
 }
+
+/* .product-types{
+     background-color:rgb(255,176,29); 
+} */
