--- a/src/Components/Signup.css
+++ b/src/Components/Signup.css
@@ -31,6 +31,7 @@
     margin:2px 0px;
     border: 2px solid rgb(154,154,154);
     font-size: 18px;
+    width: 100%;
 }
 
 .signup-form input:focus, .signup-form textarea:focus{
